--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-  <title>Loading the map...</title>
+  <title>BedStuy Strong Local Business Map</title>
 
   <!-- jQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
